--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Frequently Asked Questions about debt collection services by Al Khaleej Claim Services in Dubai, UAE">
-    <title>FAQ - Al Khaleej Claim Services</title>
+    <meta name="description" content="Learn more about Al Khaleej Claim Services, our mission, vision, and the expert team behind our success.">
+    <title>About Us - Al Khaleej Claim Services</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,10 +42,10 @@
             </label>
             <ul class="navbar-nav">
                 <li><a href="/" class="nav-link">Home</a></li>
-                <li><a href="/about" class="nav-link">About Us</a></li>
+                <li><a href="/about" class="nav-link active">About Us</a></li>
                 <li><a href="/services" class="nav-link">Our Services</a></li>
                 <li><a href="/reviews" class="nav-link">Reviews</a></li>
-                <li><a href="/faq" class="nav-link active">FAQ</a></li>
+                <li><a href="/faq" class="nav-link">FAQ</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
                 <li><a href="/blog" class="nav-link">Blog</a></li>
             </ul>
@@ -54,69 +54,73 @@
 
     <!-- Main Content -->
     <main id="main-content">
-        <section class="faq-page">
+        <section class="about-page">
             <div class="container">
-                <h1 class="section-title">Frequently Asked Questions</h1>
-                <p class="page-intro">Find answers to common questions about our debt collection services.</p>
-                
-                <div class="faq-grid">
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <span>What is your success rate in debt collection?</span>
-                            <i class="fas fa-plus"></i>
+                <div class="about-header">
+                    <h1 class="section-title">About Al Khaleej Claim Services</h1>
+                    <p class="page-intro">
+                        Your trusted partner in professional debt recovery and legal solutions. We bring over 18 years of expertise in helping businesses and individuals resolve their financial matters with integrity and efficiency.
+                    </p>
+                </div>
+
+                <div class="about-content">
+                    <div class="about-section">
+                        <div class="about-text">
+                            <h2>Our Mission</h2>
+                            <p>To provide our clients with the most effective and ethical debt recovery services available. We strive to maximize recovery rates while maintaining the highest standards of professionalism and preserving our clients' reputations.</p>
+                            <p>Our commitment to excellence drives us to continuously innovate and improve our services, ensuring the best possible outcomes for our clients while maintaining the highest ethical standards in the industry.</p>
                         </div>
-                        <div class="faq-answer">
-                            <p>We maintain a high success rate of over 80% in debt collection cases. Our success is attributed to our professional approach, experienced team, and thorough understanding of local regulations.</p>
+                        <div class="about-image">
+                            <img src="https://images.unsplash.com/photo-1552581234-26160f608093?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&h=600" alt="Our Mission">
                         </div>
                     </div>
 
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <span>How long does the debt collection process take?</span>
-                            <i class="fas fa-plus"></i>
+                    <div class="about-section reverse">
+                        <div class="about-text">
+                            <h2>Our Vision</h2>
+                            <p>To be the leading debt collection and legal services firm in the UAE, recognized for our unwavering commitment to client success, innovation, and ethical practices. We aim to set new industry standards for excellence and reliability.</p>
+                            <p>We envision a future where businesses can operate with confidence, knowing that their financial interests are protected by our professional expertise and dedication to results.</p>
                         </div>
-                        <div class="faq-answer">
-                            <p>The timeline varies depending on the case complexity and debtor's response. Typically, our amicable collection process takes 30-90 days. Legal proceedings, if necessary, may take longer.</p>
-                        </div>
-                    </div>
-
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <span>What information do you need to start collection?</span>
-                            <i class="fas fa-plus"></i>
-                        </div>
-                        <div class="faq-answer">
-                            <p>We require basic information about the debtor (name, contact details, address), proof of debt (invoices, contracts, bounced checks), and any relevant communication history.</p>
+                        <div class="about-image">
+                            <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&h=600" alt="Our Vision">
                         </div>
                     </div>
 
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <span>What are your fees for debt collection?</span>
-                            <i class="fas fa-plus"></i>
+                    <div class="about-section">
+                        <div class="about-text">
+                            <h2>Our Values</h2>
+                            <p>Our core values shape everything we do at Al Khaleej Claim Services. We believe in:</p>
+                            <ul>
+                                <li>Integrity in all our dealings</li>
+                                <li>Professional excellence and continuous improvement</li>
+                                <li>Transparent communication with clients</li>
+                                <li>Ethical debt collection practices</li>
+                                <li>Innovation in our approaches and solutions</li>
+                            </ul>
                         </div>
-                        <div class="faq-answer">
-                            <p>Our fees are typically based on a percentage of the collected amount. The exact percentage depends on the case complexity, age of debt, and collection method required. Contact us for a detailed quote.</p>
-                        </div>
-                    </div>
-
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <span>Do you handle international debt collection?</span>
-                            <i class="fas fa-plus"></i>
-                        </div>
-                        <div class="faq-answer">
-                            <p>Yes, we handle international debt collection through our network of partners. We have experience in cross-border debt recovery and understanding of international collection procedures.</p>
+                        <div class="about-image">
+                            <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&h=600" alt="Our Values">
                         </div>
                     </div>
+                </div>
 
-                    <div class="faq-item">
-                        <div class="faq-question">
-                            <span>What legal actions can you take?</span>
-                            <i class="fas fa-plus"></i>
+                <div class="team-section">
+                    <h2 class="section-title">Meet Our Leadership Team</h2>
+                    <div class="team-grid">
+                        <div class="team-member">
+                            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=500" alt="Ahmed Al-Mansoori">
+                            <h3>Ahmed Al-Mansoori</h3>
+                            <p>Founder & CEO</p>
                         </div>
-                        <div class="faq-answer">
-                            <p>We can initiate legal proceedings including filing court cases, obtaining judgments, and executing court orders. Our legal team is well-versed in UAE debt collection laws and procedures.</p>
+                        <div class="team-member">
+                            <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=500" alt="Fatima Al-Hashimi">
+                            <h3>Fatima Al-Hashimi</h3>
+                            <p>Head of Legal</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=500" alt="Yusuf Khan">
+                            <h3>Yusuf Khan</h3>
+                            <p>Lead Collection Specialist</p>
                         </div>
                     </div>
                 </div>
