--- a/services/index.html
+++ b/services/index.html
@@ -42,6 +42,7 @@
             </label>
             <ul class="navbar-nav">
                 <li><a href="/" class="nav-link">Home</a></li>
+                <li><a href="/about" class="nav-link">About Us</a></li>
                 <li><a href="/services" class="nav-link active">Our Services</a></li>
                 <li><a href="/reviews" class="nav-link">Reviews</a></li>
                 <li><a href="/faq" class="nav-link">FAQ</a></li>
