--- a/services/index.html
+++ b/services/index.html
@@ -70,6 +70,12 @@
                             </div>
                             <h3>Debt Collection</h3>
                             <p>Professional debt collection services for businesses and individuals. We handle both domestic and international debt recovery with a high success rate.</p>
+                            <ul class="service-features">
+                                <li><i class="fas fa-check-circle"></i> Domestic & International Recovery</li>
+                                <li><i class="fas fa-check-circle"></i> Business & Consumer Debt</li>
+                                <li><i class="fas fa-check-circle"></i> Customized Collection Strategies</li>
+                            </ul>
+                            <a href="/contact" class="service-cta">Learn More <i class="fas fa-arrow-right"></i></a>
                         </div>
 
                         <div class="service-card">
@@ -78,6 +84,12 @@
                             </div>
                             <h3>Legal Services</h3>
                             <p>Comprehensive legal support including documentation, court representation, and legal consultation for debt-related matters.</p>
+                            <ul class="service-features">
+                                <li><i class="fas fa-check-circle"></i> Court Representation</li>
+                                <li><i class="fas fa-check-circle"></i> Legal Documentation</li>
+                                <li><i class="fas fa-check-circle"></i> Expert Consultation</li>
+                            </ul>
+                            <a href="/contact" class="service-cta">Learn More <i class="fas fa-arrow-right"></i></a>
                         </div>
 
                         <div class="service-card">
@@ -86,6 +98,12 @@
                             </div>
                             <h3>Settlement Negotiations</h3>
                             <p>Expert negotiation services to reach favorable settlements between parties, ensuring optimal outcomes for our clients.</p>
+                            <ul class="service-features">
+                                <li><i class="fas fa-check-circle"></i> Mediation Services</li>
+                                <li><i class="fas fa-check-circle"></i> Payment Plan Arrangements</li>
+                                <li><i class="fas fa-check-circle"></i> Win-Win Solutions</li>
+                            </ul>
+                            <a href="/contact" class="service-cta">Learn More <i class="fas fa-arrow-right"></i></a>
                         </div>
 
                         <div class="service-card">
@@ -94,6 +112,12 @@
                             </div>
                             <h3>Skip Tracing</h3>
                             <p>Advanced debtor location services using state-of-the-art techniques to locate debtors who have changed addresses or gone missing.</p>
+                            <ul class="service-features">
+                                <li><i class="fas fa-check-circle"></i> Advanced Search Technology</li>
+                                <li><i class="fas fa-check-circle"></i> Database Access</li>
+                                <li><i class="fas fa-check-circle"></i> High Success Rate</li>
+                            </ul>
+                            <a href="/contact" class="service-cta">Learn More <i class="fas fa-arrow-right"></i></a>
                         </div>
 
                         <div class="service-card">
@@ -102,6 +126,12 @@
                             </div>
                             <h3>Credit Reporting</h3>
                             <p>Accurate credit reporting services to help maintain proper records and assist in future credit decisions.</p>
+                            <ul class="service-features">
+                                <li><i class="fas fa-check-circle"></i> Accurate Documentation</li>
+                                <li><i class="fas fa-check-circle"></i> Regular Updates</li>
+                                <li><i class="fas fa-check-circle"></i> Compliance Assured</li>
+                            </ul>
+                            <a href="/contact" class="service-cta">Learn More <i class="fas fa-arrow-right"></i></a>
                         </div>
 
                         <div class="service-card">
@@ -110,6 +140,12 @@
                             </div>
                             <h3>Asset Investigation</h3>
                             <p>Thorough investigation services to locate and identify assets for debt recovery purposes.</p>
+                            <ul class="service-features">
+                                <li><i class="fas fa-check-circle"></i> Property Search</li>
+                                <li><i class="fas fa-check-circle"></i> Business Assets</li>
+                                <li><i class="fas fa-check-circle"></i> Bank Account Location</li>
+                            </ul>
+                            <a href="/contact" class="service-cta">Learn More <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
