--- a/reviews/index.html
+++ b/reviews/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/jpeg" href="../images/logo.jpg">
+    <link rel="icon" type="image/png" href="../images/updated-logo.png">
 </head>
 <body>
     <!-- Top Header -->
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a href="/">
-                    <img src="../images/logo.jpg" alt="Al Khaleej Claims & Debt Recovery" class="logo">
+                    <img src="../images/updated-logo.png" alt="Al Khaleej Claims & Debt Recovery" class="logo">
                 </a>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -42,7 +42,6 @@
             </label>
             <ul class="navbar-nav">
                 <li><a href="/" class="nav-link">Home</a></li>
-                <li><a href="/about" class="nav-link">About Us</a></li>
                 <li><a href="/services" class="nav-link">Our Services</a></li>
                 <li><a href="/reviews" class="nav-link active">Reviews</a></li>
                 <li><a href="/faq" class="nav-link">FAQ</a></li>
@@ -162,7 +161,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../images/logo.jpg" alt="Al Khaleej Claim Services">
+                        <img src="../images/updated-logo.png" alt="Al Khaleej Claim Services">
                         <div class="rating">
                             <div class="stars">
                                 <i class="fas fa-star"></i>
