--- a/reviews/index.html
+++ b/reviews/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Client reviews and testimonials for Al Khaleej Claim Services - Your trusted debt collection partner in Dubai, UAE">
-    <title>Client Reviews - Al Khaleej Claim Services</title>
+    <meta name="description" content="Client reviews and testimonials for Al Khaleej Claims Services - Your trusted debt collection partner in Dubai, UAE">
+    <title>Client Reviews - Al Khaleej Claims Services</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -161,7 +161,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../images/updated-logo.png" alt="Al Khaleej Claim Services">
+                        <img src="../images/updated-logo.png" alt="Al Khaleej Claims Services">
                         <div class="rating">
                             <div class="stars">
                                 <i class="fas fa-star"></i>
@@ -206,7 +206,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 All rights reserved by Al Khaleej Claim Services</p>
+                <p>&copy; 2025 All rights reserved by Al Khaleej Claims Services</p>
             </div>
         </div>
     </footer>
