--- a/services/index.html
+++ b/services/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional debt collection and legal services offered by Al Khaleej Claim Services in Dubai, UAE">
-    <title>Our Services - Al Khaleej Claim Services</title>
+    <meta name="description" content="Professional debt collection and legal services offered by Al Khaleej Claims Services in Dubai, UAE">
+    <title>Our Services - Al Khaleej Claims Services</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +58,7 @@
                 <div class="services-header">
                     <h1 class="section-title">Our Comprehensive Services</h1>
                     <p class="page-intro">
-                        At Al Khaleej Claim Services, we offer a full suite of debt collection and legal services designed to meet the diverse needs of our clients. Our expert team is committed to delivering results with professionalism and integrity.
+                        At Al Khaleej Claims Services, we offer a full suite of debt collection and legal services designed to meet the diverse needs of our clients. Our expert team is committed to delivering results with professionalism and integrity.
                     </p>
                 </div>
                 <div class="services-container">
@@ -158,7 +158,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../images/updated-logo.png" alt="Al Khaleej Claim Services">
+                        <img src="../images/updated-logo.png" alt="Al Khaleej Claims Services">
                         <div class="rating">
                             <div class="stars">
                                 <i class="fas fa-star"></i>
@@ -203,7 +203,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 All rights reserved by Al Khaleej Claim Services</p>
+                <p>&copy; 2025 All rights reserved by Al Khaleej Claims Services</p>
             </div>
         </div>
     </footer>
